--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="container">
         <div class="loader" id="loader_container">
-            <img src="images/loader.gif" height="200px" width="200px" />
+            <img src="loader.gif" height="200px" width="200px" />
             <h5>Loading...</h5>
         </div>
 
