--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img src="loader.gif" height="200px" width="200px" />
             <h5>Loading...</h5>
         </div>
-
+        <div class="signup-container">
         <div id="createAccountContainer">
 
             <h2>Sign Up</h2>
@@ -38,7 +38,7 @@
                 <label> <input type="submit" /> </label>
             </form>
         </div>
-
+    </div>
 
         <div class="content" id="content_container">
 
